# keygate

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/core/: auth.py  exceptions.py
backend/app/models/: __init__.py
backend/app/services/: key_service.py
backend/app/vendors/: __init__.py  anthropic.py  azure.py  base.py  google.py  openai.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_api.py
docs/: API.md  DEPLOYMENT.md  VENDORS.md  index.html  openapi.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Sidebar.jsx  TopBar.jsx  ui.jsx
frontend/src/hooks/: useApi.js  useTheme.js
frontend/src/lib/: api.js  constants.js  styles.js
frontend/src/pages/vendors/: VendorsPage.jsx
scripts/: migrate.sh  seed.py
